Reworked tests